cmake_minimum_required(VERSION 3.2)
project(PollerTest)

set(PRO)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g")

set(SOURCE_FILES Logger.cpp Logger.h BlockingQueue.h util.cpp util.h FileDescriptor.cpp FileDescriptor.h Poller.cpp Poller.h Channel.cpp Channel.h Buffer.cpp Buffer.h Connection.cpp Connection.h TcpServer.cpp TcpServer.h TcpClient.cpp TcpClient.h EventLoop.cpp EventLoop.h EventLoop.cpp Liby.h TimerQueue.cpp TimerQueue.h BinaryHeap.h EventQueue.cpp EventQueue.h http/Request.cpp http/Request.h http/Reply.cpp http/Reply.h http/HttpServer.h http/HttpServer.cpp Socket.cpp ServerSocket.cpp)
add_executable(tcp_proxy ${SOURCE_FILES} tests/tcp_proxy.cpp)
TARGET_LINK_LIBRARIES(tcp_proxy pthread)
add_executable(tcp_relayer ${SOURCE_FILES} tests/tcp_relayer.cpp)
TARGET_LINK_LIBRARIES(tcp_relayer pthread)
add_executable(httpd ${SOURCE_FILES} tests/httpd.cpp)
TARGET_LINK_LIBRARIES(httpd pthread)
add_executable(echo_client ${SOURCE_FILES} tests/echo_client.cpp)
TARGET_LINK_LIBRARIES(echo_client pthread)
add_executable(echo ${SOURCE_FILES} tests/echo.cpp)
TARGET_LINK_LIBRARIES(echo pthread)
add_executable(discard ${SOURCE_FILES} tests/discard.cpp)
TARGET_LINK_LIBRARIES(discard pthread)
add_executable(daytime ${SOURCE_FILES} tests/daytime.cpp)
TARGET_LINK_LIBRARIES(daytime pthread)
add_executable(chat ${SOURCE_FILES} tests/chat.cpp)
TARGET_LINK_LIBRARIES(chat pthread)
add_executable(all_ ${SOURCE_FILES} tests/all.cpp Socket.cpp Socket.h ServerSocket.cpp ServerSocket.h SocketBase.h TcpServer.cpp TcpServer.h TcpClient.cpp TcpClient.h)
TARGET_LINK_LIBRARIES(all_ pthread)